# dotfiles

./: .ansible-lint  .bashrc_extras  .chezmoiignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .inputrc  .lessfilter  .mdformat.toml  .pre-commit-config.yaml  .spacemacs  .stylua.toml  .talismanrc  .taplo.toml  .tmux.conf  .yamlfmt  .yamllint  README.md  addons.sh  ansible.cfg  fact_gatherer.yml  install  install.sh  inventory.yml  playbook.yml  pre_tasks.yml  pyproject.toml  renovate-config.js  renovate-config.json  requirements.yml  setup.sh  site.yml
.github/: renovate.json
.github/actions/setup-and-run-dotfiles-linux/: action.yml
.github/actions/setup-and-run-dotfiles-macos/: action.yml
.github/actions/setup-user/: action.yml
.github/distros/: Dockerfile.fedora-42-cosmic-spin
.github/workflows/: ci.yml  docker.yml  main.yml  platforms.yml  pr.yml  renovate.yml  standard-run.yml
.nvim/: project.json
group_vars/: all.yml
group_vars/os/: darwin.yml  debian.yml  fedora.yml  macos.yml
group_vars/profile/: nosudo.yml  personal.yml  server.yml  user.yml
home/: .chezmoi.toml.tmpl  .chezmoidata.yaml  dot_direnvrc  dot_gdbinit  dot_gitconfig.tmpl  dot_p10k.zsh  dot_zshenv  private_dot_zshrc
home/.chezmoidata/: packages.yaml  ssh.yaml  theme.toml
home/.chezmoiscripts/: run_once_after_10-oh-my-zsh.sh.tmpl  run_once_after_15-ssh.sh.tmpl  run_once_after_20-tmux-tpm.sh.tmpl  run_once_after_25-fonts.sh.tmpl  run_once_after_26-gdb.sh.tmpl  run_once_before_05-chezmoi-age-key.sh.tmpl  run_once_before_15-ssh.sh.tmpl  run_onchange_after_05-packages.sh.tmpl  run_onchange_after_06-fedora-repos.sh.tmpl  run_onchange_after_30-go-tools.sh.tmpl  run_onchange_after_35-uv-tools.sh.tmpl  run_onchange_after_40-tldr.sh.tmpl  run_onchange_after_50-gaming-fedora.sh.tmpl  run_onchange_after_90-default-shell.sh.tmpl  run_onchange_before_04-fedora-repos.sh.tmpl  run_onchange_before_20-proton-pass-ssh-keys.sh.tmpl
home/dot_zsh/: aliases.zsh  dirs.zsh  history.zsh  keybindings.zsh  options.zsh  platform.zsh
home/private_dot_ssh/: config
host_vars/: D12.yml  beastbox.yml  ci-debian-justuser.yml  ci-fedora-workstation.yml  ci-macos-workstation.yml  ci-ubuntu-server.yml  littleboy.yml  metatron.yml  wsl.yml
host_vars/distributions/: debian.yml  fedora.yml  macos.yml
host_vars/hosts/: D12.yml  F42.yml  metatron.yml  wsl.yml
nix/: home.nix
nix/home/: direnv.nix  git.nix
nvim/: .ycm_extra_conf.py  init.vim  vimpython.py
playbooks/: harden_fedora.yml  local.yml  sanity.yml
playbooks/files/: 99-fedora-hardening.rules  aide.conf
roles/sway/: todo.txt
scripts/: ci-install.sh  install-neovim.sh  install-tree-sitter-cli.sh  install_uv.sh  library.sh  options.sh  run_ansible_lint.sh  test-install.sh  test-profiles.sh
tests/: conftest.py
tests/unit/: test_systemd_timer.py
(+175 files in other folders)
