[project]
name = "dotfiles"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "ansible>=13.0.0",
    "ansible-lint>=25.12.0",
    "pre-commit>=4.5.0",
    "pyproject-aliases>=0.2.0",
]

classifiers = ["Private :: Do Not Upload"]

[tool.aliases]
check = "uv run pre-commit run --all-files"
lint = "uv run ansible-playbook --syntax-check site.yml"
